--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,8 +65,17 @@
         }
     
         .venue-box {
-            display: inline-block;
             background: #f5f5f5;
             text-align: center;
             padding: 35px 20px 10px 10px;
+        }
+        .venue-box > span{
+            font-size: 4em;
+            color:rgba(0, 119, 255, 0.867);
+        }
+        .venue-box .venue-desc{
+            text-align: center;
+        }
+        #venue-section .googlemaps{
+            width: 100%;
         }
