--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,14 +14,13 @@
         .schedule-box {
             background: rgb(2, 0, 36);
             background: linear-gradient(137deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 0%, rgba(5, 85, 198, 1) 0%, rgba(64, 220, 255, 1) 100%);
-            height: 200px;
-            border:none;
+                border:none;
             border-radius: 0;
-        }
-
-        .schedule-box:after {
-            content: "";
-            height: 100%;
+                width: 100%;
+                height: 0;
+                padding-bottom: 100%;
+              
+              
         }
 
         .schedule-box h5 {
@@ -31,7 +30,7 @@
         
         }
         .schedule-box .card-body{
-            margin-top: 4em;
+            margin-top: 35%;
         }
         #exploreimage-wrapper img{
             height: auto;
@@ -67,7 +66,7 @@
         .venue-box {
             background: #f5f5f5;
             text-align: center;
-            padding: 35px 20px 10px 10px;
+            padding: 17.7%;
         }
         .venue-box > span{
             font-size: 4em;
@@ -77,5 +76,15 @@
             text-align: center;
         }
         #venue-section .googlemaps{
-            width: 100%;
+            overflow:hidden;
+            padding-bottom:56.25%;
+            position:relative;
+            height:0;
+                }
+        #venue-section .googlemaps iframe{
+            left:0;
+            top:0;
+            height:100%;
+            width:100%;
+            position:absolute;
         }
